--- a/src/resources/resources.qrc
+++ b/src/resources/resources.qrc
@@ -1,9 +1,9 @@
 <RCC>
     <qresource prefix="/icons">
-        <file>opl3_16.png</file>
-        <file>opl3_32.png</file>
-        <file>opl3_48.png</file>
-        <file>opl3icon.ico</file>
+        <file>opn2_16.png</file>
+        <file>opn2_32.png</file>
+        <file>opn2_48.png</file>
+        <file>opn2icon.ico</file>
     </qresource>
     <qresource prefix="/">
         <file>waves/wave0.png</file>
