--- a/src/importer.ui
+++ b/src/importer.ui
@@ -46,7 +46,11 @@
      </property>
      <layout class="QGridLayout" name="gridLayout">
       <item row="1" column="0" colspan="2">
-       <widget class="QListWidget" name="instruments"/>
+       <widget class="QListWidget" name="instruments">
+        <property name="focusPolicy">
+         <enum>Qt::NoFocus</enum>
+        </property>
+       </widget>
       </item>
       <item row="0" column="1">
        <widget class="QRadioButton" name="percussion">
