Added support for multiple 128-instrument banks

--- a/src/bank_editor.ui
+++ b/src/bank_editor.ui
@@ -55,7 +55,21 @@
      <property name="bottomMargin">
       <number>2</number>
      </property>
-     <item row="0" column="0">
+     <item row="1" column="1">
+      <widget class="QRadioButton" name="percussion">
+       <property name="text">
+        <string>Percussion</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="0" colspan="2">
+      <widget class="QListWidget" name="instruments">
+       <property name="focusPolicy">
+        <enum>Qt::NoFocus</enum>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
       <widget class="QRadioButton" name="melodic">
        <property name="text">
         <string>Melodic</string>
@@ -65,18 +79,13 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="1">
-      <widget class="QRadioButton" name="percussion">
-       <property name="text">
-        <string>Percussion</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="0" colspan="2">
-      <widget class="QListWidget" name="instruments">
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
+     <item row="0" column="0" colspan="2">
+      <widget class="QComboBox" name="bank_no">
+       <item>
+        <property name="text">
+         <string>Bank 0</string>
+        </property>
+       </item>
       </widget>
      </item>
     </layout>
@@ -2149,8 +2158,16 @@ Available from 0 to 127</string>
     <addaction name="separator"/>
     <addaction name="actionReset_current_instrument"/>
     <addaction name="separator"/>
+    <addaction name="actionAddBank"/>
+    <addaction name="actionCloneBank"/>
+    <addaction name="actionClearBank"/>
+    <addaction name="actionDeleteBank"/>
+    <addaction name="separator"/>
     <addaction name="actionAddInst"/>
+    <addaction name="actionClearInstrument"/>
     <addaction name="actionDelInst"/>
+    <addaction name="separator"/>
+    <addaction name="actionAdLibBnkMode"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuEdito"/>
@@ -2232,6 +2249,39 @@ Available from 0 to 127</string>
   <action name="actionSaveInstrument">
    <property name="text">
     <string>Save current instrument as...</string>
+   </property>
+  </action>
+  <action name="actionAddBank">
+   <property name="text">
+    <string>Add bank</string>
+   </property>
+  </action>
+  <action name="actionCloneBank">
+   <property name="text">
+    <string>Clone bank</string>
+   </property>
+  </action>
+  <action name="actionClearBank">
+   <property name="text">
+    <string>Clear bank</string>
+   </property>
+  </action>
+  <action name="actionDeleteBank">
+   <property name="text">
+    <string>Delete bank</string>
+   </property>
+  </action>
+  <action name="actionClearInstrument">
+   <property name="text">
+    <string>Clear instrument</string>
+   </property>
+  </action>
+  <action name="actionAdLibBnkMode">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>AdLib BNK mode</string>
    </property>
   </action>
  </widget>
