WOPNv2 with bank meta-data and delay measurement, and draft for a measurer

--- a/src/resources/resources.qrc
+++ b/src/resources/resources.qrc
@@ -13,5 +13,6 @@
         <file>waves/wave5.png</file>
         <file>waves/wave6.png</file>
         <file>waves/wave7.png</file>
+        <file>pencil_16x16.png</file>
     </qresource>
 </RCC>
